--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,17 @@ MONGODB_USER=your_username
 MONGODB_PASSWORD=your_password
 MONGODB_URL=your_cluster_url
 MONGODB_DB=your_database_number
+
+SSMTP_HOST = 
+SMTP_PORT = 
+MTP_USER = 
+SMTP_PASSWORD = 
+SMTP_FROM = 
+
+JWT_SECRET=
+APP_DOMAIN=
+
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
+ENABLE_CLOUDINARY=
