--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,11 @@ MONGODB_PASSWORD=your_password
 MONGODB_URL=your_cluster_url
 MONGODB_DB=your_database_number
 
-SSMTP_HOST = 
-SMTP_PORT = 
-MTP_USER = 
-SMTP_PASSWORD = 
-SMTP_FROM = 
+SSMTP_HOST= 
+SMTP_PORT= 
+MTP_USER= 
+SMTP_PASSWORD= 
+SMTP_FROM= 
 
 JWT_SECRET=
 APP_DOMAIN=
@@ -17,3 +17,6 @@ CLOUD_NAME=
 API_KEY=
 API_SECRET=
 ENABLE_CLOUDINARY=
+
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRET=
